# obs-studio-agent

./: .gitignore
.github/: copilot-instructions.md
.github/workflows/: release.yml
crates/: Cargo.toml
crates/obs-agent-cli/: Cargo.toml
crates/obs-agent-cli/src/: main.rs
crates/obs-agent-core/: Cargo.toml
crates/obs-agent-core/src/: lib.rs
crates/obs-agent-core/src/application/ports/: ai_port.rs  mod.rs  monitor_port.rs  obs_port.rs  plugin_port.rs
crates/obs-agent-core/src/domain/: mod.rs
crates/obs-agent-core/src/domain/events/: events.rs
crates/obs-agent-core/src/domain/models/: anomaly.rs  hardware.rs  mod.rs  obs.rs
crates/obs-agent-core/src/domain/services/: anomaly_detector.rs  config_optimizer.rs  health_check.rs  mod.rs
crates/obs-agent-gui/: Cargo.toml  README.md
crates/obs-agent-gui/src/: ai_functions.rs  ai_functions_formatted.rs  config.rs  main.rs  obs_launcher.rs  ui.rs
crates/obs-agent-gui/tests/: integration_test.rs
crates/obs-agent-infra/: Cargo.toml
crates/obs-agent-infra/src/adapters/: ai_adapter.rs  mod.rs  monitor_adapter.rs  obs_adapter.rs  plugin_adapter.rs
crates/obs-agent-ml/: Cargo.toml
crates/obs-agent-ml/src/: lib.rs
crates/obs-agent-ml/src/models/: mod.rs
crates/obs-agent-server/: Cargo.toml
crates/obs-agent-server/src/: main.rs
docs/: OBS_AI_AGENT_BUSINESS_PLAN.md  TECHNICAL_PLAN_RUST.md
