[workspace]
members = [
    "obs-agent-core",
    "obs-agent-gui",
    "obs-agent-infra",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
dotenv = "0.15"
eframe = "0.28"
egui = "0.28"
futures = "0.3"
image = "0.24"
nvml-wrapper = "0.9"
obws = "0.11"
rayon = "1.8"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smartcore = "0.3"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "migrate"] }
sysinfo = "0.30"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
obs-agent-core = { path = "obs-agent-core" }
obs-agent-infra = { path = "obs-agent-infra" }
