[package]
name = "obs-agent-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "obs-agent"
path = "src/main.rs"

[dependencies]
# Core
obs-agent-core = { workspace = true }
obs-agent-infra = { workspace = true }

# Async
tokio = { workspace = true }

# CLI
clap = { workspace = true }

# Error Handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Config
dotenv = { workspace = true }

# Serialización
serde_json = { workspace = true }
