[package]
name = "obs-agent-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "obs-agent-gui"
path = "src/main.rs"

[dependencies]
# Core
obs-agent-core = { workspace = true }
obs-agent-infra = { workspace = true }

# Async
tokio = { workspace = true }

# GUI
eframe = "0.28"
egui = "0.28"

# Time
chrono = "0.4"

# Error Handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Config
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"

# Utils
dirs = "5.0"
